# wasm

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md  cloudbuild-cache.yaml  cloudbuild.yaml  envoy.yaml  go.mod  go.sum  install_cli.sh  main.go  registry.yaml
.circleci/: config.yaml  config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue--docs.md  issue--question.md  question.md
.github/workflows/: helloworld.yaml  release.yaml  (+2 more)
builder/: Dockerfile  Makefile  bazel-build-filter.sh  bazelfy.sh  build-filter.sh  build.sh
ci/: setup-kind.sh  tools.go  upload_github_release_assets.go
docs/: Dockerfile  Makefile  README.md  docs.toml  generate_cli_docs.go  generate_reference_docs.go  proto_docs_template.tmpl
example/: .bazelrc  BUILD  README.md  WORKSPACE  envoy_filter_http_wasm_example.cc  filter.cc  filter.proto  generate.go
example/rust/: Cargo.toml  Makefile.base  README.md  build.rs  config.yml  poem.txt
example/rust/proto/: filter.proto
example/rust/src/: context.rs  ffi.rs  filter.rs  host.rs  lib.rs  logger.rs  main.rs
example/rust/src/protos/: filter.rs
operator/: generate.go  generate_test.go  happy_path_e2e_test.go  operator_suite_test.go
sdks/: README.md
spec/: README-compat.md  README.md  spec-compat.md  spec.md
test/: utils.go
test-loader/: .bazelrc  BUILD  README.md  WORKSPACE  main.cc
tools/: README.md
tools/wasme/cli/example/rust/: Cargo.toml  config.json
tools/wasme/cli/example/rust/proto/: filter.proto  rustproto.proto
tools/wasme/cli/example/rust/src/: host.rs
(+527 files in other folders)
