[package]
description = "Envoy WASM filter bindings"
name = "wasm_filter_bindings"
version = "0.0.1"
authors = ["Eitan Yarmush, Yuval Kohavi"]
edition = "2018"


[dependencies]
log = "0.4"
wasm-bindgen = "0.2"
serde_json = "1.0"
serde        = { version = "1.0", features = ["derive"] }
# prost = "0.5.0"
# bytes = "0.4.0"
# # Only necessary if using Protobuf well-known types:
# prost-types = "0.5.0"

[dependencies.protobuf]
git = "https://github.com/stepancheg/rust-protobuf"
features = ["with-serde"]

[build-dependencies]
protoc-rust = {git = "https://github.com/stepancheg/rust-protobuf"}
# protoc-grpcio = "1.1.0"
# prost-build = { version = "0.5.0" }

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[lib]
crate-type = ["cdylib", "rlib"]
